--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.68.0
-uvicorn==0.15.0
+fastapi
+uvicorn
 python-multipart==0.0.5
-deepface==0.0.75
-Pillow==8.3.1
-opencv-python==4.5.3.56
+deepface
+Pillow
+opencv-python
 sqlalchemy==1.4.23
 psycopg2-binary==2.9.1
 alembic==1.6.5
